--- a/AP2 LabPracTest/style.css
+++ b/AP2 LabPracTest/style.css
@@ -16,6 +16,11 @@ ul {
     display: table;
     margin: 0 auto;
 }
+
+img{
+    max-width: 100%;
+}
+
 .name{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 40px;
